--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "author": "Andrey Popp <me@andreypopp.com>",
   "license": "MIT",
   "main": "index",
+  "type": "module",
   "peerDependencies": {
     "react": "*",
     "react-dom": "*"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
+    "@types/node": "^18.11.18",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "eslint": "^8.11.0",
-    "prettier": "^2.6.0",
+    "prettier": "^2.8.2",
     "react": "*",
     "react-dom": "*",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "typescript-language-server": "^3.0.0"
+  },
+  "dependencies": {
+    "prettier-printer": "^1.1.4"
   }
 }
